test/core/errors/templates_error/zs/instantiate_name_clash_with_single_import_error/pkg.zs
package instantiate_name_clash_with_single_import_error.pkg;

struct Template<T>
{
    T field;
};
